--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,61 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+<h2><u>University of Nevada, Reno</u></h2>
+<br>
+<h3>PHYS 181 - Physics for Scientists and Engineers II</h3>
+<br>
+Undergraduate course, Department of Physics, Fall 2017 - Spring 2019
+<br>
+<br>
+Thermodynamic laws, kinetic theory, electric charge, field, potential, current, dielectrics, circuit elements, magnetic fields and materials, electromagnetic oscillations.
+<h5>Recitation Videos</h5>
+I have created a series of recitation videos to accompany the course as taught by Dr. Kristin Lewis. These videos can be found <a href="https://www.youtube.com/channel/UCIcA-7xWHtvpt3D8w2Z7-Qg">here</a>.
+<br>
+I help the learning assistant position for this class for four semesters where I provided in-class assistance, review lectures, office hours for tutoring, and created a series of recitation videos to accompany lectures (see above).
+<br>
+<br>
+<h3>MATH 295/301/302 - Introduction to Proofs</h3>
+<br>
+Undergraduate course, Department of Mathematics and Statistics, Fall 2017 - Fall 2018
+<br>
+<br>
+Foundations of mathematical proof writing for advanced courses in the Math/Stat majors. Proof methods will be applied to topics in logic; mathematical induction; elementary set theory; functions; properties of integers and real numbers.
+<br>
+I held the position as teaching assistant for the NevadaFit summer program for incoming freshman where my duties include providing review lectures and grading.
+<br>
+<br>
+<h3>PHYS 151 - General Physics I</h3>
+<br>
+Undergraduate course, Department of Physics, Spring 2017
+<br>
+<br>
+For non-physical science majors. Kinematics, energy and momentum conservation, rotational dynamics, thermodynamics, fluids, harmonic motion and sound. Laboratory experiments illustrate many of these fundamental principles.
+<br>
+I help positions as a learning assistant - providing in-class assistance, review lectures, and office hours for tutoring - as well as a teaching assistant for the NevadaFit summer program for incoming freshmen.
+<br>
+<br>
+<h3>Grader Appointments</h3>
+<br>
+Undergraduate courses, Department of Mathematics and Statistics, 2017-2019
+<br>
+<ul>
+	<li>
+		MATH 283 - Calculus III (Fall 2018)
+	</li>
+	<li>
+		MATH 295/301/302 - Introduction to Proofs (Spring 2017 - Spring 2019)
+	</li>
+	<li>
+		MATH 310 - Real Analysis I (Spring 2019)
+	</li>
+	<li>
+		MATH 448 - Partial Differential Equations (Spring 2018)
+	</li>
+</ul>
+
+<!-- {% include base_path %}
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
-{% endfor %}
+{% endfor %} -->
