--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,14 +4,16 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
-
+<div align="justify">
 <h2><u>University of Nevada, Reno</u></h2> 
 <h3>PHYS 181 - Physics for Scientists and Engineers II</h3>
 Undergraduate course, Department of Physics, Fall 2017 - Spring 2019
 <br>
 <br>
 Thermodynamic laws, kinetic theory, electric charge, field, potential, current, dielectrics, circuit elements, magnetic fields and materials, electromagnetic oscillations.
+<br>
 <i>Recitation Videos</i>
+<br>
 I have created a series of recitation videos to accompany the course as taught by Dr. Kristin Lewis. These videos can be found <a href="https://www.youtube.com/channel/UCIcA-7xWHtvpt3D8w2Z7-Qg">here</a>.
 <br>
 <br>
@@ -53,6 +55,7 @@ Undergraduate courses, Department of Mathematics and Statistics, 2017-2019
 		MATH 448 - Partial Differential Equations (Spring 2018)
 	</li>
 </ul>
+</div>
 
 <!-- {% include base_path %}
 
