--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,11 +6,12 @@ author_profile: true
 ---
 <div align="justify">
 <h2><u>University of Nevada, Reno</u></h2> 
-<h3>PHYS 181 - Physics for Scientists and Engineers II</h3>
+<b>PHYS 181 - Physics for Scientists and Engineers II</b>
 Undergraduate course, Department of Physics, Fall 2017 - Spring 2019
 <br>
 <br>
 Thermodynamic laws, kinetic theory, electric charge, field, potential, current, dielectrics, circuit elements, magnetic fields and materials, electromagnetic oscillations.
+<br>
 <br>
 <i>Recitation Videos</i>
 <br>
@@ -36,7 +37,6 @@ For non-physical science majors. Kinematics, energy and momentum conservation, r
 <br>
 <br>
 I help positions as a learning assistant - providing in-class assistance, review lectures, and office hours for tutoring - as well as a teaching assistant for the NevadaFit summer program for incoming freshmen.
-<br>
 <br>
 <h3>Grader Appointments</h3>
 Undergraduate courses, Department of Mathematics and Statistics, 2017-2019
