--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,9 +7,6 @@ author_profile: true
 <div align="justify">
 <h2><u>University of Nevada, Reno</u></h2> 
 <b>PHYS 181 - Physics for Scientists and Engineers II</b>
-<font size="-1">Undergraduate course, Department of Physics, Fall 2017 - Spring 2019</font>
-<br>
-<br>
 Thermodynamic laws, kinetic theory, electric charge, field, potential, current, dielectrics, circuit elements, magnetic fields and materials, electromagnetic oscillations.
 <br>
 <br>
@@ -18,25 +15,19 @@ Thermodynamic laws, kinetic theory, electric charge, field, potential, current, 
 I have created a series of recitation videos to accompany the course as taught by Dr. Kristin Lewis. These videos can be found <a href="https://www.youtube.com/channel/UCIcA-7xWHtvpt3D8w2Z7-Qg">here</a>.
 <br>
 <br>
-I held the learning assistant position for this class for four semesters where I provided in-class assistance, review lectures, office hours for tutoring, and created a series of recitation videos to accompany lectures (see above).
+I held the learning assistant position for this class for four semesters (from Fall 2017 to Spring 2019) where I provided in-class assistance, review lectures, office hours for tutoring, and created a series of recitation videos to accompany lectures (see above).
 <br>
 <h3>MATH 295/301/302 - Introduction to Proofs</h3>
-Undergraduate course, Department of Mathematics and Statistics, Fall 2017 - Fall 2018
-<br>
-<br>
 Foundations of mathematical proof writing for advanced courses in the Math/Stat majors. Proof methods will be applied to topics in logic; mathematical induction; elementary set theory; functions; properties of integers and real numbers.
 <br>
 <br>
-I held the position as teaching assistant for the NevadaFit summer program for incoming freshman where my duties include providing review lectures and grading.
+I held the position as teaching assistant (Summer 2018) for the NevadaFit summer program for incoming freshman where my duties include providing review lectures and grading. I was also the grader for this course for several semesters.
 <br>
 <h3>PHYS 151 - General Physics I</h3>
-Undergraduate course, Department of Physics, Spring 2017
-<br>
-<br>
 For non-physical science majors. Kinematics, energy and momentum conservation, rotational dynamics, thermodynamics, fluids, harmonic motion and sound. Laboratory experiments illustrate many of these fundamental principles.
 <br>
 <br>
-I help positions as a learning assistant - providing in-class assistance, review lectures, and office hours for tutoring - as well as a teaching assistant for the NevadaFit summer program for incoming freshmen.
+I help positions as a learning assistant (Spring 2017), providing in-class assistance, review lectures, and office hours for tutoring, as well as a teaching assistant for the NevadaFit summer program for incoming freshmen (Summer 2017-2018).
 <br>
 <h3>Grader Appointments</h3>
 Undergraduate courses, Department of Mathematics and Statistics, 2017-2019
