--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 <div align="justify">
 <h2><u>University of Nevada, Reno</u></h2> 
-<b>PHYS 181 - Physics for Scientists and Engineers II</b>
+<h3>PHYS 181 - Physics for Scientists and Engineers II</h3>
 Thermodynamic laws, kinetic theory, electric charge, field, potential, current, dielectrics, circuit elements, magnetic fields and materials, electromagnetic oscillations.
 <br>
 <br>
