--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -20,7 +20,7 @@ redirect_from:
 </div>
 
 
-<table style="width:100%">
+<table border="0" style="width:100%">
   <tr>
   	<td width="70%"><h2>The Barry Goldwater Scholarship</h2>
 	<div align="justify">
